[tool.poetry]
name = "LeetCode"
version = "0.1.0"
description = "Answer Codes of LeetCode problems."
authors = ["gnkm <genki.matsunaga@gmail.com>"]

[tool.poetry.dependencies]
# https://leetcode.com/playground/DreLujJB
python = "3.11.7"

[tool.poetry.group.dev.dependencies]
pytest = "8.0.0"
icecream = "2.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
